--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,8 +35,14 @@
         .search-bar { background: white; border-radius: 30px; }
         .search-bar input { border: none; outline: none; width: 100%; padding: 10px; }
         .search-bar button { color: white; padding: 10px 20px; }
-        .product-image { object-fit: cover; width: 100%; height: 250px; }
+        .product-image { object-fit: contain;width: 100%; height: auto; max-height: 250px; background-color: white; }
         .header-title { font-family: 'Monomakh', sans-serif; }
+
+        @media (max-width: 768px) {
+    .product-image {
+        max-height: none; 
+    }
+}
     </style>
 </head>
 <body class="font-sans">
