--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
 
         <!-- Website Name (Now Visible on Mobile and Desktop) -->
         <div class="text-2xl md:text-5xl font-bold header-title mx-auto">
-            Discount Catalog
+            <h1>Discount Catalog</h1>
         </div>
 
         <!-- Desktop Navigation Links (Hidden on mobile) -->
